Adding the view looking like SAT

--- a/LAB02-ED1-G.csproj
+++ b/LAB02-ED1-G.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>LAB02_ED1_G</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\imgs\" />
+  </ItemGroup>
+
 </Project>
